modules/coreboot + config/coreboot-novacustom* config/coreboot-nitropad-ns50 : bump to latest dasharo 1.0.1rc3 release for v56x_mtl
repro:
./docker_repro.sh make BOARD=novacustom-v540tu coreboot.save_in_oldconfig_format_in_place
./docker_repro.sh make BOARD=novacustom-v560tu coreboot.save_in_oldconfig_format_in_place
./docker_repro.sh make BOARD=novacustom-nv4x_adl coreboot.save_in_oldconfig_format_in_place
./docker_repro.sh make BOARD=UNTESTED_nitropad-ns50 coreboot.save_in_oldconfig_format_in_place

TODO: seperate MSI/nv4x_adl/v56mtl/ns50 boards: only v56mtl are 1.0.1 rc3 (I shouldn't do this)

Otherwise no microcode updates, no usb boot ala ventoy without iso validation, no qubesos 4.3 support...

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-novacustom-v540tu.config
+++ b/config/coreboot-novacustom-v540tu.config
@@ -6,19 +6,19 @@
 #
 # General setup
 #
-CONFIG_COREBOOT_BUILD=y
-CONFIG_LOCALVERSION="v0.9.0-rc2"
+CONFIG_LOCALVERSION="novacustom_v56x_mtl_igpu_v1.0.1-rc3"
 CONFIG_CBFS_PREFIX="fallback"
 CONFIG_COMPILER_GCC=y
 # CONFIG_COMPILER_LLVM_CLANG is not set
-CONFIG_ARCH_SUPPORTS_CLANG=y
 # CONFIG_ANY_TOOLCHAIN is not set
 # CONFIG_CCACHE is not set
+# CONFIG_LTO is not set
 # CONFIG_IWYU is not set
 # CONFIG_FMD_GENPARSER is not set
 # CONFIG_UTIL_GENPARSER is not set
-CONFIG_OPTION_BACKEND_NONE=y
-# CONFIG_USE_OPTION_TABLE is not set
+# CONFIG_OPTION_BACKEND_NONE is not set
+CONFIG_USE_OPTION_TABLE=y
+# CONFIG_STATIC_OPTION_TABLE is not set
 CONFIG_COMPRESS_RAMSTAGE_LZMA=y
 # CONFIG_COMPRESS_RAMSTAGE_LZ4 is not set
 CONFIG_SEPARATE_ROMSTAGE=y
@@ -37,11 +37,11 @@ CONFIG_TSEG_STAGE_CACHE=y
 # CONFIG_UPDATE_IMAGE is not set
 CONFIG_BOOTSPLASH_IMAGE=y
 CONFIG_BOOTSPLASH_FILE="@BRAND_DIR@/bootsplash.jpg"
+CONFIG_BOOTSPLASH_REGION_LOGO_FILE=""
 CONFIG_BOOTSPLASH_CONVERT=y
 CONFIG_BOOTSPLASH_CONVERT_QUALITY=90
 # CONFIG_BOOTSPLASH_CONVERT_RESIZE is not set
 # CONFIG_BOOTSPLASH_CONVERT_COLORSWAP is not set
-# CONFIG_FW_CONFIG is not set
 
 #
 # Software Bill Of Materials (SBOM)
@@ -59,23 +59,27 @@ CONFIG_BOOTSPLASH_CONVERT_QUALITY=90
 #
 # CONFIG_VENDOR_51NB is not set
 # CONFIG_VENDOR_ACER is not set
-# CONFIG_VENDOR_ADLINK is not set
 # CONFIG_VENDOR_AMD is not set
+# CONFIG_VENDOR_AOOSTAR is not set
 # CONFIG_VENDOR_AOPEN is not set
 # CONFIG_VENDOR_APPLE is not set
+# CONFIG_VENDOR_ARM is not set
 # CONFIG_VENDOR_ASROCK is not set
 # CONFIG_VENDOR_ASUS is not set
 # CONFIG_VENDOR_BIOSTAR is not set
 # CONFIG_VENDOR_BOSTENTECH is not set
 # CONFIG_VENDOR_BYTEDANCE is not set
 # CONFIG_VENDOR_CAVIUM is not set
-CONFIG_VENDOR_CLEVO=y
+# CONFIG_VENDOR_CLEVO is not set
 # CONFIG_VENDOR_COMPULAB is not set
+# CONFIG_VENDOR_CWWK is not set
 # CONFIG_VENDOR_DELL is not set
 # CONFIG_VENDOR_EMULATION is not set
+# CONFIG_VENDOR_ERYING is not set
 # CONFIG_VENDOR_EXAMPLE is not set
 # CONFIG_VENDOR_FACEBOOK is not set
 # CONFIG_VENDOR_FOXCONN is not set
+# CONFIG_VENDOR_FRAMEWORK is not set
 # CONFIG_VENDOR_GETAC is not set
 # CONFIG_VENDOR_GIGABYTE is not set
 # CONFIG_VENDOR_GOOGLE is not set
@@ -86,10 +90,12 @@ CONFIG_VENDOR_CLEVO=y
 # CONFIG_VENDOR_INTEL is not set
 # CONFIG_VENDOR_INVENTEC is not set
 # CONFIG_VENDOR_KONTRON is not set
+# CONFIG_VENDOR_LATTEPANDA is not set
 # CONFIG_VENDOR_LENOVO is not set
 # CONFIG_VENDOR_LIBRETREND is not set
+# CONFIG_VENDOR_MITAC_COMPUTING is not set
 # CONFIG_VENDOR_MSI is not set
-# CONFIG_VENDOR_NOVACUSTOM is not set
+CONFIG_VENDOR_NOVACUSTOM=y
 # CONFIG_VENDOR_OCP is not set
 # CONFIG_VENDOR_OPENCELLULAR is not set
 # CONFIG_VENDOR_PACKARDBELL is not set
@@ -99,6 +105,7 @@ CONFIG_VENDOR_CLEVO=y
 # CONFIG_VENDOR_PRODRIVE is not set
 # CONFIG_VENDOR_PROTECTLI is not set
 # CONFIG_VENDOR_PURISM is not set
+# CONFIG_VENDOR_RAPTOR_CS is not set
 # CONFIG_VENDOR_RAZER is not set
 # CONFIG_VENDOR_RODA is not set
 # CONFIG_VENDOR_SAMSUNG is not set
@@ -109,11 +116,13 @@ CONFIG_VENDOR_CLEVO=y
 # CONFIG_VENDOR_SUPERMICRO is not set
 # CONFIG_VENDOR_SYSTEM76 is not set
 # CONFIG_VENDOR_TI is not set
+# CONFIG_VENDOR_TOPTON is not set
 # CONFIG_VENDOR_UP is not set
+# CONFIG_VENDOR_VIA is not set
 CONFIG_MAINBOARD_FAMILY="Not Applicable"
 CONFIG_MAINBOARD_PART_NUMBER="V54x_6x_TU"
 CONFIG_MAINBOARD_VERSION="V540TU"
-CONFIG_MAINBOARD_DIR="clevo/mtl-h"
+CONFIG_MAINBOARD_DIR="novacustom/mtl-h"
 CONFIG_DIMM_MAX=4
 CONFIG_DIMM_SPD_SIZE=1024
 CONFIG_FMDFILE=""
@@ -126,96 +135,94 @@ CONFIG_ONBOARD_VGA_IS_PRIMARY=y
 # CONFIG_POST_DEVICE is not set
 # CONFIG_POST_IO is not set
 CONFIG_UART_FOR_CONSOLE=0
+CONFIG_VARIANT_DIR="igpu"
+CONFIG_OVERRIDE_DEVICETREE="variants/$(CONFIG_VARIANT_DIR)/overridetree.cb"
 CONFIG_DEVICETREE="devicetree.cb"
 # CONFIG_VBOOT is not set
 CONFIG_VBOOT_VBNV_OFFSET=0x28
-CONFIG_VARIANT_DIR="igpu"
-CONFIG_OVERRIDE_DEVICETREE="variants/$(CONFIG_VARIANT_DIR)/overridetree.cb"
 # CONFIG_VGA_BIOS is not set
+CONFIG_PCIEXP_ASPM=y
+CONFIG_PCIEXP_L1_SUB_STATE=y
+CONFIG_PCIEXP_CLK_PM=y
 CONFIG_MAINBOARD_SMBIOS_MANUFACTURER="Notebook"
+CONFIG_ECAM_MMCONF_BASE_ADDRESS=0xc0000000
+CONFIG_ECAM_MMCONF_BUS_NUMBER=256
+CONFIG_MEMLAYOUT_LD_FILE="src/arch/x86/memlayout.ld"
+# CONFIG_FATAL_ASSERTS is not set
 CONFIG_INTEL_GMA_VBT_FILE="src/mainboard/$(MAINBOARDDIR)/variants/$(VARIANT_DIR)/data.vbt"
 # CONFIG_DISABLE_HECI1_AT_PRE_BOOT is not set
 CONFIG_PRERAM_CBMEM_CONSOLE_SIZE=0x2000
+CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="V54x_6x_TU"
+# CONFIG_CONSOLE_POST is not set
+CONFIG_FSP_FD_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Fsp.fd"
+CONFIG_MAX_SOCKET=1
 CONFIG_CMOS_DEFAULT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.default"
 CONFIG_CMOS_LAYOUT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.layout"
 CONFIG_BOOT_DEVICE_SPI_FLASH_BUS=0
-
-#
-# Alder Lake P
-#
-# CONFIG_BOARD_CLEVO_NS50PU is not set
-# CONFIG_BOARD_CLEVO_NV40PZ is not set
-
-#
-# Comet Lake U
-#
-# CONFIG_BOARD_CLEVO_L140CU is not set
-
-#
-# Kaby Lake U
-#
-# CONFIG_BOARD_CLEVO_N130WU is not set
-
-#
-# Meteor Lake H
-#
-# CONFIG_BOARD_CLEVO_V540TNX is not set
-# CONFIG_BOARD_CLEVO_V560TNX is not set
-CONFIG_BOARD_CLEVO_V540TU=y
-# CONFIG_BOARD_CLEVO_V560TU is not set
-
-#
-# Tiger Lake U
-#
-# CONFIG_BOARD_CLEVO_L140MU is not set
-# CONFIG_BOARD_CLEVO_NV40MZ is not set
-# CONFIG_BOARD_CLEVO_NS50MU is not set
-CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="V54x_6x_TU"
-# CONFIG_CONSOLE_POST is not set
 # CONFIG_USE_PM_ACPI_TIMER is not set
 CONFIG_TPM_PIRQ=0x61
 # CONFIG_SOC_INTEL_CSE_SEND_EOP_EARLY is not set
 CONFIG_VBOOT_FWID_VERSION="$(CONFIG_LOCALVERSION)"
-CONFIG_EC_SYSTEM76_EC_BAT_THRESHOLDS=y
-CONFIG_BOARD_CLEVO_MTLH_COMMON=y
-CONFIG_BOARD_CLEVO_V5X0TU_BASE=y
-CONFIG_EC_SYSTEM76_EC_FLASH_SIZE=0x40000
-CONFIG_ECAM_MMCONF_BASE_ADDRESS=0xc0000000
-CONFIG_ECAM_MMCONF_BUS_NUMBER=256
-CONFIG_MEMLAYOUT_LD_FILE="src/arch/x86/memlayout.ld"
+# CONFIG_DEBUG_SMI is not set
+CONFIG_EC_DASHARO_EC_BAT_THRESHOLDS=y
+CONFIG_PXE_ROM_ID="8086,550a"
 CONFIG_DCACHE_RAM_BASE=0xfef00000
 CONFIG_DCACHE_RAM_SIZE=0xc0000
 CONFIG_C_ENV_BOOTBLOCK_SIZE=0x40000
-CONFIG_DCACHE_BSP_STACK_SIZE=0x80400
+CONFIG_DCACHE_BSP_STACK_SIZE=0x88000
 CONFIG_MAX_ACPI_TABLE_SIZE_KB=144
 CONFIG_HAVE_INTEL_FIRMWARE=y
+# CONFIG_USE_LEGACY_8254_TIMER is not set
 CONFIG_MRC_SETTINGS_CACHE_SIZE=0x10000
 CONFIG_DRIVERS_INTEL_WIFI=y
 CONFIG_IFD_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/descriptor.bin"
 CONFIG_ME_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/me.bin"
 CONFIG_GBE_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/gbe.bin"
-CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x200000
-CONFIG_PCIEXP_DEFAULT_MAX_RESIZABLE_BAR_BITS=36
+CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x40000
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
-# CONFIG_USE_LEGACY_8254_TIMER is not set
-# CONFIG_DEBUG_SMI is not set
 CONFIG_HAVE_IFD_BIN=y
 CONFIG_PCIEXP_HOTPLUG_BUSES=42
 CONFIG_PCIEXP_HOTPLUG_MEM=0xc200000
 CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM=0x1c000000
 CONFIG_PS2K_EISAID="PNP0303"
 CONFIG_PS2M_EISAID="PNP0F13"
-CONFIG_POWER_STATE_DEFAULT_ON_AFTER_FAILURE=y
+
+#
+# Alder Lake P (2022)
+#
+# CONFIG_BOARD_NOVACUSTOM_NS5X_ADLP is not set
+# CONFIG_BOARD_NOVACUSTOM_NV4X_ADLP is not set
+
+#
+# Meteor Lake H
+#
+# CONFIG_BOARD_NOVACUSTOM_V540TNX is not set
+# CONFIG_BOARD_NOVACUSTOM_V560TNX is not set
+CONFIG_BOARD_NOVACUSTOM_V540TU=y
+# CONFIG_BOARD_NOVACUSTOM_V560TU is not set
+# CONFIG_BOARD_NOVACUSTOM_NUC_BOX is not set
+
+#
+# Tiger Lake U (2021)
+#
+# CONFIG_BOARD_NOVACUSTOM_NV4X_TGLU is not set
+# CONFIG_BOARD_NOVACUSTOM_NS5X_TGLU is not set
+CONFIG_BOARD_NOVACUSTOM_MTLH_COMMON=y
+CONFIG_BOARD_NOVACUSTOM_V5X0TU_BASE=y
+CONFIG_EC_DASHARO_EC_FLASH_SIZE=0x40000
+CONFIG_EC_DASHARO_EC_CPU_FAN_COUNT=2
 CONFIG_D3COLD_SUPPORT=y
-CONFIG_PCIEXP_ASPM=y
-CONFIG_PCIEXP_L1_SUB_STATE=y
-CONFIG_PCIEXP_CLK_PM=y
+CONFIG_TPM_MEASURED_BOOT=y
+CONFIG_POWER_STATE_DEFAULT_ON_AFTER_FAILURE=y
 # CONFIG_DRIVERS_UART_8250IO is not set
 CONFIG_PC_CMOS_BASE_PORT_BANK1=0x72
 CONFIG_FSP_TEMP_RAM_SIZE=0x20000
+CONFIG_HEAP_SIZE=0x100000
 CONFIG_EC_GPE_SCI=0x50
-CONFIG_TPM_MEASURED_BOOT=y
+CONFIG_EC_STARLABS_BATTERY_MODEL="Unknown"
+CONFIG_EC_STARLABS_BATTERY_TYPE="LION"
+CONFIG_EC_STARLABS_BATTERY_OEM="Unknown"
 CONFIG_LINUX_COMMAND_LINE="quiet loglevel=2"
 CONFIG_BOARD_ROMSIZE_KB_32768=y
 # CONFIG_COREBOOT_ROMSIZE_KB_256 is not set
@@ -288,16 +295,17 @@ CONFIG_SOC_INTEL_UART_DEV_MAX=3
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_M_VAL=0x25a
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_N_VAL=0x7fff
 CONFIG_FSP_HEADER_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Include/"
-CONFIG_FSP_FD_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Fsp.fd"
+CONFIG_SOC_INTEL_COMMON_DEBUG_CONSENT=0
 CONFIG_DATA_BUS_WIDTH=128
 CONFIG_DIMMS_PER_CHANNEL=2
 CONFIG_MRC_CHANNEL_WIDTH=16
-CONFIG_BUILDING_WITH_DEBUG_FSP=y
 CONFIG_INTEL_GMA_BCLV_OFFSET=0xc8258
 CONFIG_INTEL_GMA_BCLV_WIDTH=32
 CONFIG_INTEL_GMA_BCLM_OFFSET=0xc8254
 CONFIG_INTEL_GMA_BCLM_WIDTH=32
 CONFIG_FSP_PUBLISH_MBP_HOB=y
+CONFIG_SOC_INTEL_COMMON_BLOCK_ACPI_SLP_S0_FREQ_HZ=0x2005
+CONFIG_FSP_STATUS_GLOBAL_RESET=0x40000003
 CONFIG_MAX_HECI_DEVICES=6
 CONFIG_BOOTBLOCK_IN_CBFS=y
 CONFIG_HAVE_PAM0_REGISTER=y
@@ -308,17 +316,17 @@ CONFIG_SOC_INTEL_METEORLAKE_U_H=y
 CONFIG_SOC_INTEL_METEORLAKE_TCSS_USB4_SUPPORT=y
 CONFIG_METEORLAKE_CAR_ENHANCED_NEM=y
 CONFIG_CPU_MAX_TEMPERATURE=110
-CONFIG_IOE_PCR_BASE_ADDRESS=0x60000000
+CONFIG_IOE_PCR_BASE_ADDRESS=0x3fff0000000
 CONFIG_SOC_INTEL_USB2_DEV_MAX=10
 CONFIG_SOC_INTEL_USB3_DEV_MAX=2
-CONFIG_SOC_INTEL_METEORLAKE_DEBUG_CONSENT=0
 CONFIG_SOC_INTEL_GFX_FRAMEBUFFER_OFFSET=0x800000
 CONFIG_PCIE_LTR_MAX_SNOOP_LATENCY=0x100f
 CONFIG_PCIE_LTR_MAX_NO_SNOOP_LATENCY=0x100f
 CONFIG_IOE_DIE_CLOCK_START=6
 CONFIG_SOC_INTEL_CSE_FW_PARTITION_CMOS_OFFSET=161
-CONFIG_SOC_INTEL_COMMON_BLOCK_ACPI_SLP_S0_FREQ_HZ=0x2005
 CONFIG_SOC_PHYSICAL_ADDRESS_WIDTH=42
+CONFIG_DEBUG_STACK_OVERFLOW_BREAKPOINTS=y
+CONFIG_FSP_T_LOCATION=0xfffe0000
 CONFIG_INTEL_TME=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_P2SB=y
 CONFIG_FIXED_SMBUS_IO_BASE=0xefa0
@@ -346,6 +354,7 @@ CONFIG_USE_FSP_FEATURE_PROGRAM_ON_APS=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CPU_SMMRELOCATE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CAR=y
 CONFIG_INTEL_CAR_NEM_ENHANCED=y
+CONFIG_INTEL_CAR_ENEM_USE_EFFECTIVE_WAY_SIZE=y
 CONFIG_CAR_HAS_SF_MASKS=y
 CONFIG_COS_MAPPED_TO_MSB=y
 CONFIG_CAR_HAS_L3_PROTECTED_WAYS=y
@@ -439,6 +448,8 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_SMM_TCO_ENABLE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SMM_S5_DELAY_MS=0
 CONFIG_SOC_INTEL_COMMON_BLOCK_SPI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SA=y
+CONFIG_HAVE_CAPID_A_REGISTER=y
+CONFIG_HAVE_BDSM_BGSM_REGISTER=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_TCSS=y
 # CONFIG_TCSS_HAS_USBC_OPS is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_THERMAL=y
@@ -450,10 +461,10 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_USB4=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_PCIE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_XHCI=y
 CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
-# CONFIG_FIRMWARE_CONNECTION_MANAGER is not set
-CONFIG_SOFTWARE_CONNECTION_MANAGER=y
+CONFIG_FIRMWARE_CONNECTION_MANAGER=y
+# CONFIG_SOFTWARE_CONNECTION_MANAGER is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
-CONFIG_ENABLE_EARLY_DMA_PROTECTION=y
+# CONFIG_ENABLE_EARLY_DMA_PROTECTION is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI_ELOG=y
@@ -501,7 +512,6 @@ CONFIG_DEFAULT_X2APIC_LATE_WORKAROUND=y
 CONFIG_X2APIC_LATE_WORKAROUND=y
 CONFIG_UDELAY_TSC=y
 CONFIG_TSC_MONOTONIC_TIMER=y
-CONFIG_X86_CLFLUSH_CAR=y
 CONFIG_HAVE_SMI_HANDLER=y
 CONFIG_SMM_TSEG=y
 CONFIG_SMM_PCI_RESOURCE_STORE_NUM_SLOTS=8
@@ -530,7 +540,7 @@ CONFIG_SOUTHBRIDGE_INTEL_COMMON_SMBUS=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_PIRQ_ACPI_GEN=y
 CONFIG_HAVE_INTEL_CHIPSET_LOCKDOWN=y
 CONFIG_INTEL_DESCRIPTOR_MODE_CAPABLE=y
-# CONFIG_VALIDATE_INTEL_DESCRIPTOR is not set
+CONFIG_VALIDATE_INTEL_DESCRIPTOR=y
 # CONFIG_INTEL_CHIPSET_LOCKDOWN is not set
 CONFIG_FIXED_RCBA_MMIO_BASE=0xfed1c000
 CONFIG_RCBA_LENGTH=0x4000
@@ -543,13 +553,13 @@ CONFIG_RCBA_LENGTH=0x4000
 # Embedded Controllers
 #
 CONFIG_EC_ACPI=y
-CONFIG_EC_SYSTEM76_EC=y
-# CONFIG_EC_SYSTEM76_EC_UPDATE is not set
+CONFIG_EC_DASHARO_EC=y
+# CONFIG_EC_DASHARO_EC_UPDATE is not set
 
 #
 # Intel Firmware
 #
-# CONFIG_IFDTOOL_DISABLE_ME is not set
+CONFIG_IFDTOOL_DISABLE_ME=y
 CONFIG_HAVE_ME_BIN=y
 # CONFIG_STITCH_ME_BIN is not set
 # CONFIG_ME_REGION_ALLOW_CPU_READ_ACCESS is not set
@@ -576,13 +586,16 @@ CONFIG_DASHARO_PREFER_S3_SLEEP=y
 CONFIG_DASHARO_FIRMWARE_UPDATE_MODE=y
 # end of Dasharo Configuration
 
+CONFIG_ACPI_FNKEY_GEN_SCANCODE=0
 CONFIG_UDK_BASE=y
 # CONFIG_UDK_202005_BINDING is not set
 CONFIG_UDK_202302_BINDING=y
 CONFIG_UDK_2013_VERSION=2013
 CONFIG_UDK_2017_VERSION=2017
 CONFIG_UDK_202005_VERSION=202005
+CONFIG_UDK_202111_VERSION=202111
 CONFIG_UDK_202302_VERSION=202302
+CONFIG_UDK_202305_VERSION=202305
 CONFIG_UDK_VERSION=202302
 CONFIG_ARCH_X86=y
 CONFIG_ARCH_BOOTBLOCK_X86_32=y
@@ -608,6 +621,10 @@ CONFIG_DEBUG_HW_BREAKPOINTS_IN_ALL_STAGES=y
 CONFIG_DEBUG_NULL_DEREF_BREAKPOINTS=y
 CONFIG_DEBUG_NULL_DEREF_BREAKPOINTS_IN_ALL_STAGES=y
 # CONFIG_DUMP_SMBIOS_TYPE17 is not set
+CONFIG_X86_BOOTBLOCK_EXTRA_PROGRAM_SZ=0
+CONFIG_DEFAULT_EBDA_LOWMEM=0x100000
+CONFIG_DEFAULT_EBDA_SEGMENT=0xF600
+CONFIG_DEFAULT_EBDA_SIZE=0x400
 # end of Chipset
 
 #
@@ -626,21 +643,22 @@ CONFIG_NO_EARLY_GFX_INIT=y
 CONFIG_GENERIC_LINEAR_FRAMEBUFFER=y
 CONFIG_LINEAR_FRAMEBUFFER=y
 CONFIG_BOOTSPLASH=y
+CONFIG_DEFAULT_SCREEN_ROTATION_INT=0
 # end of Display
 
 CONFIG_PCI=y
 CONFIG_ECAM_MMCONF_SUPPORT=y
 CONFIG_PCIX_PLUGIN_SUPPORT=y
 CONFIG_AZALIA_HDA_CODEC_SUPPORT=y
-CONFIG_AZALIA_LOCK_DOWN_R_WO_GCAP=y
 CONFIG_PCIEXP_PLUGIN_SUPPORT=y
 CONFIG_ECAM_MMCONF_LENGTH=0x10000000
 CONFIG_PCI_ALLOW_BUS_MASTER=y
 CONFIG_PCI_SET_BUS_MASTER_PCI_BRIDGES=y
 CONFIG_PCI_ALLOW_BUS_MASTER_ANY_DEVICE=y
-CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS=y
-CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR=y
-CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G=y
+# CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS is not set
+# CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR is not set
+CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_ABOVE_4G=y
+# CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G is not set
 CONFIG_PCIEXP_HOTPLUG_IO=0x800
 # CONFIG_EARLY_PCI_BRIDGE is not set
 CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
@@ -657,10 +675,12 @@ CONFIG_I2C_TRANSFER_TIMEOUT_US=500000
 #
 CONFIG_CRB_TPM_BASE_ADDRESS=0xfed40000
 # CONFIG_DRIVERS_EFI_VARIABLE_STORE is not set
+# CONFIG_DRIVERS_EFI_FW_INFO is not set
 # CONFIG_ELOG is not set
 CONFIG_CACHE_MRC_SETTINGS=y
 CONFIG_MRC_SETTINGS_PROTECT=y
 CONFIG_MRC_CACHE_USING_MRC_VERSION=y
+# CONFIG_DRIVERS_OPTION_CFR is not set
 # CONFIG_SMMSTORE is not set
 CONFIG_SPI_FLASH=y
 CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP=y
@@ -693,7 +713,6 @@ CONFIG_PLATFORM_USES_FSP2_2=y
 CONFIG_PLATFORM_USES_FSP2_3=y
 CONFIG_PLATFORM_USES_FSP2_X86_32=y
 CONFIG_ADD_FSP_BINARIES=y
-CONFIG_FSP_T_LOCATION=0xfffe0000
 CONFIG_FSP_S_CBFS="fsps.bin"
 CONFIG_FSP_M_CBFS="fspm.bin"
 CONFIG_FSP_FULL_FD=y
@@ -702,15 +721,16 @@ CONFIG_FSP_M_XIP=y
 CONFIG_FSP_USES_CB_STACK=y
 CONFIG_HAVE_FSP_LOGO_SUPPORT=y
 CONFIG_FSP_COMPRESS_FSP_S_LZ4=y
-CONFIG_FSP_STATUS_GLOBAL_RESET_REQUIRED_3=y
-CONFIG_FSP_STATUS_GLOBAL_RESET=0x40000003
 CONFIG_SOC_INTEL_COMMON_FSP_RESET=y
 CONFIG_FSPS_HAS_ARCH_UPD=y
 CONFIG_FSPS_USE_MULTI_PHASE_INIT=y
 CONFIG_FSP_USES_CB_DEBUG_EVENT_HANDLER=y
 # CONFIG_DISPLAY_FSP_TIMESTAMPS is not set
+CONFIG_FSP_UGOP_EARLY_SIGN_OF_LIFE=y
 CONFIG_FSP_ENABLE_SERIAL_DEBUG=y
+# CONFIG_BUILDING_WITH_DEBUG_FSP is not set
 CONFIG_INTEL_GMA_ACPI=y
+CONFIG_VBT_CBFS_COMPRESSION_DEFAULT_LZ4=y
 CONFIG_VBT_CBFS_COMPRESSION_LZMA=y
 # CONFIG_VBT_CBFS_COMPRESSION_LZ4 is not set
 # CONFIG_VBT_CBFS_COMPRESSION_NONE is not set
@@ -758,8 +778,8 @@ CONFIG_TPM2=y
 CONFIG_TPM=y
 CONFIG_MAINBOARD_HAS_TPM2=y
 # CONFIG_DEBUG_TPM is not set
-CONFIG_TPM_RDRESP_NEED_DELAY=y
 # CONFIG_TPM_LOG_CB is not set
+# CONFIG_TPM_LOG_TCG is not set
 CONFIG_TPM_LOG_TPM2=y
 # CONFIG_TPM_HASH_SHA1 is not set
 CONFIG_TPM_HASH_SHA256=y
@@ -780,6 +800,7 @@ CONFIG_PLATFORM_HAS_DRAM_CLEAR=y
 # CONFIG_SECURITY_CLEAR_DRAM_ON_REGULAR_BOOT is not set
 # end of Memory initialization
 
+CONFIG_INTEL_TXT_LIB=y
 # CONFIG_INTEL_TXT is not set
 # CONFIG_STM is not set
 # CONFIG_INTEL_CBNT_SUPPORT is not set
@@ -803,7 +824,6 @@ CONFIG_BOOT_DEVICE_SPI_FLASH=y
 CONFIG_BOOT_DEVICE_MEMORY_MAPPED=y
 CONFIG_BOOT_DEVICE_SUPPORTS_WRITES=y
 CONFIG_RTC=y
-CONFIG_HEAP_SIZE=0x100000
 
 #
 # Console
@@ -818,7 +838,6 @@ CONFIG_CONSOLE_CBMEM=y
 # CONFIG_CONSOLE_CBMEM_DUMP_TO_UART is not set
 # CONFIG_CONSOLE_SPI_FLASH is not set
 # CONFIG_CONSOLE_I2C_SMBUS is not set
-# CONFIG_CONSOLE_SYSTEM76_EC is not set
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_8 is not set
 CONFIG_DEFAULT_CONSOLE_LOGLEVEL_7=y
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_6 is not set
@@ -854,6 +873,7 @@ CONFIG_MAINBOARD_SERIAL_NUMBER="123456789"
 #
 # CONFIG_PAYLOAD_NONE is not set
 # CONFIG_PAYLOAD_ELF is not set
+# CONFIG_PAYLOAD_FLAT_BINARY is not set
 # CONFIG_PAYLOAD_BOOTBOOT is not set
 # CONFIG_PAYLOAD_FILO is not set
 # CONFIG_PAYLOAD_GRUB2 is not set
@@ -864,16 +884,15 @@ CONFIG_MAINBOARD_SERIAL_NUMBER="123456789"
 # CONFIG_PAYLOAD_EDK2 is not set
 CONFIG_PAYLOAD_LINUX=y
 CONFIG_PAYLOAD_FILE="@BOARD_BUILD_DIR@/bzImage"
-CONFIG_PAYLOAD_OPTIONS=""
 # CONFIG_PXE is not set
 CONFIG_LINUX_INITRD="@BOARD_BUILD_DIR@/initrd.cpio.xz"
+# CONFIG_DASHARO is not set
 
 #
 # Dasharo specific payload options
 #
 # end of Dasharo specific payload options
 
-# CONFIG_PAYLOAD_IS_FLAT_BINARY is not set
 CONFIG_COMPRESS_SECONDARY_PAYLOAD=y
 
 #
@@ -918,7 +937,6 @@ CONFIG_HAVE_GPIO_SNAPSHOT_VERIFY_SUPPORT=y
 # General Debug Settings
 #
 # CONFIG_GDB_STUB is not set
-# CONFIG_FATAL_ASSERTS is not set
 CONFIG_HAVE_DEBUG_GPIO=y
 # CONFIG_DEBUG_GPIO is not set
 # CONFIG_DEBUG_CBFS is not set
